--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <body class="bg-site-background font-alright preflight">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
+    <script type="text/javascript" src="./src/assets/js/index.js"></script>
+    <script type="text/javascript" src="./src/assets/js/lightgrids.js"></script>
   </body>
 </html>
