Start refactorin RemoteSync into something readable

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
-    <script type="text/javascript" src="/js/index.js"></script>
-    <script type="text/javascript" src="/js/lightgrids.js"></script>
+    <script type="text/javascript" src="./src/assets/js/index.js"></script>
+    <script type="text/javascript" src="./src/assets/js/lightgrids.js"></script>
   </body>
 </html>
