Some refactors after staging fiasco

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Melatonin.dev</title>
   </head>
-  <body class="bg-site-background font-alright preflight">
-    <div id="app"></div>
+  <body class="bg-site-background font-alright preflight m-0 h-screen">
+    <div id="app" class="h-full"></div>
     <script type="module" src="/src/main.ts"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
     <script type="text/javascript" src="./src/assets/js/index.js"></script>
